# The_Ice-Climbers_NES

./: .gitignore  Block.h  CMakeLists.txt  EngineECS.cpp  EngineECS.h  EngineUI.h  Makefile  Oldmain.cpp  Oldmain2.cpp  Popo.h  README.md  SidePlatform.h  Topi.h  animator.h  audioplayer.h  auto.sh  auto2.sh  backup.cpp  build.sh  colisiones.h  collider.h  component.h  components.h  controllers.h  effects.h  entity.h  figuras.h  iceclimber.sav  main.cpp  main2.cpp  main3.cpp  maintest.cpp  mates.h  migration.cpp  raylib_ext.h  raylibx.cpp  raylibx.h  rigidbody.h  settings.h  settings.ini  (+2 more)
.old/: backup.cpp
.old/Colisiones/: colisiones.h  core.h  figuras.h
Assets/.old/: backup.cpp  main.cpp  maintest.cpp  migration.cpp
Assets/.old/Colisiones/: physicsManager.h
Assets/NES - Ice Climber - Sprites/: 01-Title-screen.ase  NES - Ice Climber - General Sprites.ase
Assets/OLD SPRITES/1_new/: Settings.ase
Assets/SPRITES/: Hex_biome.aseprite
Assets/Scripts/: Block.cpp  Block.h  Cloud.cpp  Cloud.h  Controllers.cpp  Enemies.h  FloorBehavior.h  Fruit.h  Grass_block.h  Ice_cone.h  Player.cpp  Player.h  Popo.h  SidePlatform.h  Topi.h  controllers.h  settings.h  settings.ini  spawner.h
Assets/Sprites/: Level1_preview.ase
Assets/Sprites/OLD SPRITES/: Game cursor.ase
Assets/Sprites/OLD SPRITES/1_new/: Arcade.ase
Assets/Sprites/Unused/: 01-Title-screen.ase
Colisiones/: auto.sh  main.cpp
Colisiones/Colisiones/: colisiones.h  figuras.h  game.h  main.cpp  mates.h  test.cpp
Examples/: pruebaColisiones.example
Libraries/engine/: Dengine.cpp  Dengine.h  DengineUI.cpp  DengineUI.h  EngineUI.cpp  EngineUI.h  raylibx.cpp  raylibx.h
assets/SPRITES/: Large_block.aseprite
libraries/engine/: EngineECS.cpp  EngineECS.h  auto.sh  raylibx.cpp  raylibx.h
libs/engine/: DengineUI.h
